# llmGateway

./: .env.backup  .env.example  .env.production  .gitignore  AGENTS.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
admin/: __init__.py  db_utils.py  db_utils_v2.py  streamlit_app.py
docs/: DEPLOY.md  DEPLOY_CHECKLIST.md  GITHUB_SECRETS.md  gateway-performance-review.md  pr-demo.md
gateway/: CODE_REVIEW_REPORT.md  README.md  __init__.py
init-scripts/: README.md
nginx/: nginx.conf
scripts/: deploy.sh  fix_quota_sync.py  generate-secrets.sh  migrate_add_student_provider_key.py  run_e2e_tests.sh  setup-github-secrets.sh  setup-server.sh  setup-ssh.sh  start_admin.sh  test_mentor_mode.py  test_mentor_mode_quick.py  test_multi_turn_conversations.py  view_conversation_threads.py
tests/: REAL_LLM_CONVERSATIONS.json  REAL_LLM_TEST_RESULTS.md  test_404_check.py  test_admin_api.py  test_admin_entrypoint.py  test_admin_students_conflict.py  test_admin_students_serialization.py  test_admin_token_whitespace.py  test_all_pages_playwright.py  test_async_logger.py  test_auth.py  test_auth_api_key_cache.py  test_browser_admin.py  test_browser_all_pages.py  test_browser_final.py  test_browser_simple.py  test_browser_use.py  test_cache.py  test_chat_flow.py  test_chat_weekly_prompt.py  test_content_classifier.py  test_db_models.py  test_debug_with_browser.py  test_distributed_quota.py  test_docs.py  test_e2e_simple.py  (+36 more)
(+190 files in other folders)
