[project]
name = "teachproxy"
version = "0.1.0"
description = "AI 教学代理网关与管理面板"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.128.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
