[project]
name = "teachproxy"
version = "0.1.0"
description = "AI 教学代理网关与管理面板"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "cryptography>=42.0.0",
    "fastapi>=0.128.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=1.30.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.setuptools]
packages = ["gateway", "admin"]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0",
]
e2e = [
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=1.8.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.6.0",
]
